<resources>
    <string name="next">Suivant</string>
    <string name="confirm_answer">Confirmer réponse</string>
    <string name="answer">Réponse</string>
    <string name="operation">Opération</string>
    <string name="next_operation">Opération suivante</string>
    <string name="message">Essaie encore!</string>
    <string name="question_mark" translatable="false">\?</string>
    <string name="equal_mark" translatable="false">=</string>
    <string name="second_number" translatable="false">3</string>
    <string name="operator" translatable="false">+</string>
    <string name="first_number" translatable="false">5</string>
    <string name="loading">Chargement..</string>
    <string name="congrats">Bravo!</string>
    <string name="correct_answer">C\'était la bonne réponse.</string>
    <string name="hidden_objects">Objets cachés</string>
    <string name="animals">Animaux</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Légumes</string>
    <string name="find"> Trouver</string>
    <string name="welcome">Bienvenue</string>
    <string name="free_movement">Déplacement libre</string>
    <string name="learning">Apprentissage</string>
    <string name="connect_the_robot_please">Connectez le robot s\'il vous plaît</string>
    <string name="ok" translatable="false">OK</string>
    <string name="apple">Pomme</string>
    <string name="banana">Banane</string>
    <string name="berries">Baie</string>
    <string name="cherry">Cerise</string>
    <string name="grapes">Raisin</string>
    <string name="grenade">Grenade</string>
    <string name="coconut">Noix de coco</string>
    <string name="kiwi">Kiwi</string>
    <string name="lemon">Citron</string>
    <string name="melon">Melon</string>
    <string name="orange">Orange</string>
    <string name="pineapple">Ananas</string>
    <string name="strawberry">Fraise</string>
    <string name="watermelon">Pastèque</string>
    <string name="carrot">Carrot</string>
    <string name="bell_pepper">Poivron</string>
    <string name="corn">Maïs</string>
    <string name="cucumber">Concombre</string>
    <string name="eggplant">Aubergine</string>
    <string name="garlic">Ail</string>
    <string name="onion">Oignon</string>
    <string name="peas">Pois</string>
    <string name="potato">Pomme de terre</string>
    <string name="pumpkin">Citrouille</string>
    <string name="tomato">Tomate</string>
    <string name="radish">Radis</string>
    <string name="lettuce">Laitue</string>
    <string name="broccoli">Brocoli</string>
    <string name="cat">Chat</string>
    <string name="dog">Chien</string>
    <string name="chicken">Poulet</string>
    <string name="duck">Canard</string>
    <string name="fish">Poisson</string>
    <string name="dolphin">Dauphin</string>
    <string name="elephant">Éléphant</string>
    <string name="camel">Chameau</string>
    <string name="deer">Cerf</string>
    <string name="giragge">Girafe</string>
    <string name="lion">Lion</string>
    <string name="sheep">Mouton</string>
    <string name="rabbit">Lapin</string>
    <string name="horse">Cheval</string>
    <string name="monkey">Singe</string>
    <string name="swan">Cygne</string>
    <string name="turtle">Tortue</string>
    <string name="squirrel">Écureuil</string>
    <string name="koala">Koala</string>
    <string name="panda_bear">Panda</string>
    <string name="frog">Grenouille</string>
    <string name="pig">Porc</string>
    <string name="snake">Serpent</string>
    <string name="bee">Abeille</string>
    <string name="crab">Crabe</string>
    <string name="flamingo">Flamant</string>
    <string name="hedgehog">Hérisson</string>
    <string name="hippopotamus">Hippopotame</string>
    <string name="jellyfish">Méduse</string>
    <string name="kangaroo">Kangourou</string>
    <string name="llama">Lama</string>
    <string name="octopus">Poulpe</string>
    <string name="owl">Hibou</string>
    <string name="parrot">Perroquet</string>
    <string name="penguin">Manchot</string>
    <string name="seahorse">Hippocampe</string>
    <string name="seal">Phoque</string>
    <string name="shark">Requin</string>
    <string name="squid">Calamar</string>
    <string name="whale">Baleine</string>
    <string name="mental_calculations">Calcul mental</string>
    <string name="english">Anglais</string>
    <string name="french">Français</string>
    <string name="arabic">Arabe</string>
    <string name="apprend_les_noms_des_fruits">Apprend les noms des fruits</string>
    <string name="apprend_les_noms_des_legumes">Apprend les noms des légumes</string>
    <string name="apprend_les_noms_des_animaux">Apprend les noms des animaux</string>
    <string name="app_name" translatable="false">Robot4Kids</string>
    <string name="apricot">Abricot</string>
    <string name="avocado">Avocat</string>
    <string name="blueberry">Myrtille</string>
    <string name="chestnut">Châtaigne</string>
    <string name="fig">Figue</string>
    <string name="gooseberry">Groseille à maquereau</string>
    <string name="grapefruit">Pamplemousse</string>
    <string name="guava">Goyave</string>
    <string name="kumquat">Kumquat</string>
    <string name="lime">Citron vert</string>
    <string name="mango">Mangue</string>
    <string name="mangosteen">Mangoustan</string>
    <string name="papaya">Papaye</string>
    <string name="granadilla">Grenadile</string>
    <string name="peacj">Pêche</string>
    <string name="pear">Poire</string>
    <string name="persimmon">Kaki</string>
    <string name="plum">Prune</string>
    <string name="quince">Coing</string>
    <string name="rambutan">Ramboutan</string>
    <string name="raspberry">Framboise</string>
    <string name="date">Datte</string>
    <string name="beet">Betterave</string>
    <string name="cabbage">Chou</string>
    <string name="cauliflower">Chou-fleur</string>
    <string name="chili_pepper">Piment</string>
    <string name="ginger">Gingembre</string>
    <string name="horseradish">Raifort</string>
    <string name="olives">Olive</string>
    <string name="spinach">Épinard</string>
    <string name="turnip">Navet</string>
    <string name="zucchini">Courgette</string>
    <string name="ant">Fourmi</string>
    <string name="anteater">Fourmilier</string>
    <string name="arctic_fox">Renard arctique</string>
    <string name="bear">Ours</string>
    <string name="beetle">Scarabée</string>
    <string name="bison">Bison</string>
    <string name="black_panther">Panthère noire</string>
    <string name="chameleon">Caméléon</string>
    <string name="cheetah">Guépard</string>
    <string name="clown_fish">Poisson-clown</string>
    <string name="cougar">Puma</string>
    <string name="cow">Vache</string>
    <string name="crocodile">Crocodile</string>
    <string name="eagle">Aigle</string>
    <string name="emu">Émeu</string>
    <string name="fox">Renard</string>
    <string name="goat">Chèvre</string>
    <string name="gorilla">Gorille</string>
    <string name="hamster">Hamster</string>
    <string name="jaguar">Jaguar</string>
    <string name="ladybug">Coccinelle</string>
    <string name="maki">Maki</string>
    <string name="leopard">Léopard</string>
    <string name="lobster">Homard</string>
    <string name="mouse">Souris</string>
    <string name="orca">Orque</string>
    <string name="ostrich">Autruche</string>
    <string name="otter">Loutre</string>
    <string name="peacock">Paon</string>
    <string name="pigeon">Pigeon</string>
    <string name="polar_bear">Ours polaire</string>
    <string name="prawn">Crevette</string>
    <string name="puffer_fish">Poisson-globe</string>
    <string name="raccoon">Raton laveur</string>
    <string name="rat">Rat</string>
    <string name="red_panda">Panda rouge</string>
    <string name="reindeer">Renne</string>
    <string name="rhinoceros">Rhinocéros</string>
    <string name="salmon">Saumon</string>
    <string name="scorpion">Scorpion</string>
    <string name="skunk">Moufette</string>
    <string name="sloth">Paresse</string>
    <string name="snail">Escargot</string>
    <string name="spider">Araignée</string>
    <string name="starfish">Étoile de mer</string>
    <string name="tiger">Tigre</string>
    <string name="tortoise">Tortue</string>
    <string name="toucan">Toucan</string>
    <string name="turkey">Dinde</string>
    <string name="walrus">Morse</string>
    <string name="wolf">Loup</string>
    <string name="yak">Yak</string>
    <string name="zebra">Zèbre</string>
    <string name="words_game">Jeu de mots</string>
    <string name="number" translatable="false">%1$d</string>
    <string name="level_1">Niveau 1</string>
    <string name="level_2">Niveau 2</string>
    <string name="level_3">Niveau 3</string>
    <string name="learn_numbers">Apprend les nombres</string>
    <string name="zero">Zéro</string>
    <string name="one">Un</string>
    <string name="two">Deux</string>
    <string name="three">Trois</string>
    <string name="four">Quatre</string>
    <string name="five">Cinq</string>
    <string name="six">Six</string>
    <string name="seven">Sept</string>
    <string name="eight">Huit</string>
    <string name="nine">Neuf</string>
    <string name="ten">dix</string>
    <string name="eleven">Onze</string>
    <string name="twelve">Douze</string>
    <string name="thirteen">Treize</string>
    <string name="fourteen">Quatorze</string>
    <string name="fifteen">Quinze</string>
    <string name="sixteen">Seize</string>
    <string name="seventeen">Dix-sept</string>
    <string name="eighteen">Dix-huit</string>
    <string name="nineteen">Dix-neuf</string>
    <string name="twenty">Vingt</string>
    <string name="numbers">Nombres</string>
    <string name="level_0">Niveau 0</string>
    <string name="alphabet">Alphabet</string>
    <string name="learn_alphabet">Apprend l\'alphabet</string>
    <string name="annuler">Annuler</string>
</resources>
