<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"> <!-- to show what the parent is -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operation"
                android:textColor="@android:color/black"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/first_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/first_number"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/operator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/operator"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/second_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/second_number"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/equal_mark"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/question_mark"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/operation_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/message"
                android:textColor="#D77C7C"
                android:textSize="30sp"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="clickNext"
                    android:paddingLeft="10dp"
                    android:paddingTop="6dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="6dp"
                    android:text="@string/next_operation"
                    android:theme="@style/AppTheme.Button"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:onClick="clickChoose"
                    android:paddingLeft="10dp"
                    android:paddingTop="6dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="6dp"
                    android:text="@string/confirm_answer"
                    android:theme="@style/AppTheme.Button"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <EditText
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer"
                android:importantForAutofill="no"
                android:inputType="number"
                android:visibility="gone" />
        </LinearLayout>

        <include
            layout="@layout/map_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp">

            <include
                layout="@layout/controller"
                android:layout_width="200dp"
                android:layout_height="200dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
