<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"> <!-- to show what the parent is -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operation"
                android:textSize="40sp"
                android:textColor="@android:color/black"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/first_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_number"
                    android:textSize="30sp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:id="@+id/operator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/operator"
                    android:textSize="30sp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:id="@+id/second_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_number"
                    android:textSize="30sp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equal_mark"
                    android:textSize="30sp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_mark"
                    android:textSize="30sp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@android:color/black"
                    />

            </LinearLayout>
            <TextView
                android:id="@+id/operation_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textSize="30sp"
                android:visibility="invisible"
                android:layout_marginEnd="5dp"
                android:textColor="#D77C7C"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="20dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_operation"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:theme="@style/AppTheme.Button"
                    android:onClick="clickNext"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:layout_marginStart="20dp"
                    android:id="@+id/choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_answer"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:theme="@style/AppTheme.Button"
                    android:onClick="clickChoose"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
            <EditText
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer"
                android:inputType="number"
                android:visibility="gone"
                android:importantForAutofill="no" />
        </LinearLayout>
        <include
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            layout="@layout/map_layout" />
        <LinearLayout
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <include
                android:layout_height="200dp"
                android:layout_width="200dp"
                layout="@layout/controller" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
