<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/first_half"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/split"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:text="_"
                android:visibility="invisible"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/second_half"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:visibility="gone"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <ImageView
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/operation_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textSize="30sp"
            android:visibility="gone"
            android:textColor="#D77C7C"

            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="20dp">
            <Button
                android:id="@+id/next2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:theme="@style/AppTheme.Button"
                android:visibility="gone"
                android:onClick="clickNext"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_answer"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:theme="@style/AppTheme.Button"
                android:onClick="clickChoose"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/next"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:theme="@style/AppTheme.Button"
                android:onClick="clickNext"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/choose2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_answer"
                android:layout_marginStart="20dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="gone"
                android:theme="@style/AppTheme.Button"
                android:onClick="clickChoose"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
        <EditText
            android:id="@+id/letter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="letter"
            android:visibility="gone"
            android:inputType="text"
            android:importantForAutofill="no" />
        <include
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            layout="@layout/map_layout" />
        <LinearLayout
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <include
                android:layout_height="200dp"
                android:layout_width="200dp"
                layout="@layout/controller" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>